Revise README for CodeQuest Desktop application
Updated README to reflect project name change and added detailed project description, features, installation instructions, and usage guidelines.